style.css
@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');

html, body {
  height: 100%;
  width: 100%;
  font-family: 'Poppins', sans-serif;
  color: #222;
  scroll-behavior: smooth;
}
.carousel-inner img {
  width: 100%;
  height: 100%;
}
.carousel-caption h1 {
  font-size: 400%;
  text-transform: uppercase;
  text-shadow: 2px 2px 3px #000;
}
.carousel-caption h3 {
  font-size: 200%;
  font-weight: 500;
  text-shadow: 2px 2px 2px #000;
  padding-bottom: 1rem;
}
.project-video {
  position: relative;
  padding-bottom: 56.25%;
}
.project-video iframe {
  position: absolute;
  top: 50%;
  left: 25%;
  width: 50%;
  height: 50%;
}
.project-youtube-icon {
  display: none;
}
.carousel-logo {
  padding-bottom: 10%;
  font-size: 4.5em;
  filter: drop-shadow(2px 2px 2px #000);
}
.carousel-logo a {
  margin: 5%;
}
.carousel-text {
  position: absolute;
  top: 0%;
  bottom: auto;
}
.contribution {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  font-size: 100%;
}
.contribution .jumbotron {
  margin-bottom: 4%;
  background-color: rgba(25, 25, 25, 0.5);
  filter: drop-shadow(2px 2px 2px #000);
  padding-top: 1rem;
  padding-bottom: 0;
  border-radius: 5;
}
.contribution p {
  color: #FFF;
  width: 100%;
  text-align: center;
}
.about-me .jumbotron {
  margin:0;
  border-radius: 0;
}
.padding {
  padding-bottom: 2rem;
}
.social a {
  font-size: 4.5em;
  padding: 7.5%;
}
.fa-github {
  color: #6e5494;
}
.fa-bitbucket {
  color: #2684FF;
  text-shadow: 3px 3px 16px #272634;
}
.fa-itch-io {
  color: #fa5c5c;
}
.fa-youtube {
  color: #c4302b;
}
.fa-linkedin {
  color: #0a66c2;
}
.fa-twitter {
  color: #00aced;
}
.fa-github:hover,
.fa-bitbucket:hover,
.fa-itch-io:hover,
.fa-youtube:hover,
.fa-linkedin:hover,
.fa-twitter:hover {
  color: #d5d5d5;
}
footer {
  background-color: #3f3f3f;
  color: #d5d5d5;
  padding-top: 2rem;
}
hr.light {
  border-top: 1px solid #d5d5d5;
  width: 20rem;
  margin-top: .8rem;
  margin-bottom: 1rem;
}
footer a {
  color: #d5d5d5 
}
hr.light-100 {
  border-top: 1px solid #d5d5d5;
  width: 100%;
  margin-top: .8rem;
  margin-bottom: 1rem;
}




/*---Media Queries --*/
@media (max-width: 992px) {
  .carousel-text {
    top: 0%;
  }
  .carousel-text h1 {
    font-size: 325%;
  }
  .carousel-text h3 {
    font-size: 140%;
    font-weight: 400;
    padding-bottom: .2rem;
  }
  .carousel-logo {
    padding-bottom: 12.5%;
    font-size: 3em;
  }
  .carousel-logo a {
    margin: 5%;
  }
  .contribution {
    font-size: 75%;
  }
  .social a {
    font-size: 4em;
    padding: 7%;
  }
  }
@media (max-width: 768px) {
  .carousel-text {
    top: 5%;
  }
  .carousel-text h1 {
    font-size: 225%;
  }
  .carousel-text h3 {
    font-size: 110%;
    font-weight: 400;
    padding-bottom: .2rem;
  }
  .project-video {
    display: none;
  }
  .project-youtube-icon {
    display: inline;
  }
  .carousel-logo {
    padding-bottom: 12.5%;
    font-size: 2.5em;
  }
  .carousel-logo a {
    margin: 2.5%;
  }
  .contribution {
    font-size: 60%;
  }
  .social a {
    font-size: 2.5em;
    padding-left: 7.5%;
    padding-right: 7.5%;
  }
}
@media (max-width: 576px) {
  .carousel-text {
    top: 5%;
  }
  .carousel-text h1 {
    font-size: 150%;
  }
  .carousel-text h3 {
    font-size: 75%;
  }
  .carousel-logo {
    position: absolute;
    bottom: -80%;
    font-size: 2em;
  }
  .carousel-logo a {
    margin: 3%;
  }
  .contribution {
    display: none;
  }
  .carousel-indicators {
    display: none;
  }
  .social a {
    font-size: 2em;
    padding-left: 7.5%;
    padding-right: 7.5%;
  }
}


/*---Firefox Bug Fix --*/
.carousel-item {
  transition: -webkit-transform 0.5s ease;
  transition: transform 0.5s ease;
  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
  -webkit-backface-visibility: visible;
  backface-visibility: visible;
}
/*--- Bootstrap Padding Fix --*/
[class*="col-"] {
    padding: 1rem;
}

